# ndcrashdemo

./: .gitmodules  README.md  build.gradle  jndcrash.cmake  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: crasher.cpp  ndcrashdemo.c
app/src/main/java/ru/ivanarh/ndcrashdemo/: CrashService.java  Crasher.java  MainActivity.java  MainApplication.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: root_path.xml
gradle/wrapper/: gradle-wrapper.properties
